<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL" Id="{1c39b129-18fd-4385-869a-91334fbb476f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	bEnable				: BOOL;
	bReset				: BOOL;
	fOverride			: LREAL := 100;
	bFeedhold			: BOOL;
	bError				: BOOL;
	
	stEnable			: Tc3_TcForms.ST_SetResetCtrl;
	stStatus			: Tc3_TcForms.ST_SetResetState;
	
	aAxisStatus			: ARRAY[1..3] OF Tc3_TcForms.ST_LevelState;
	aAxisPowerEnable	: ARRAY[1..3] OF BOOL;
	aAxisPowerState		: ARRAY[1..3] OF Tc3_TcForms.ST_LevelState;
	aMoveAbsCtrl		: ARRAY[1..3] OF Tc3_TcForms.ST_EdgeTrigCtrl;
	aMoveAbsState		: ARRAY[1..3] OF Tc3_TcForms.ST_EdgeTrigState;
	aJogForward			: ARRAY[1..3] OF BOOL;
	aJogBackwards		: ARRAY[1..3] OF BOOL;
	bRapid				: BOOL;
	fInc				: LREAL := 1.0;
	bIncPlus			: BOOL;
	bIncMinus			: BOOL;
	
	stMoveAllCtrl		: Tc3_TcForms.ST_EdgeTrigCtrl;
	stMoveAllState		: Tc3_TcForms.ST_EdgeTrigState;
	
	stProgramCtrl		: Tc3_TcForms.ST_EdgeTrigCtrl;
	stProgramState		: Tc3_TcForms.ST_EdgeTrigState;
	nProgramState		: INT;
	nProgramStep		: INT;
	nProgramNo			: INT;
	
	aTargetPos			: ARRAY[1..3] OF LREAL;
	aActPos				: ARRAY[1..3] OF LREAL;
	
	bAirSupply			: BOOL;
	stGripperCtrl		: Tc3_TcForms.ST_SetResetCtrl;
	stGripperState		: Tc3_TcForms.ST_SetResetState;
	nGripperState		: INT;
	
	// Config
	fVelocity			: LREAL := 500.0;
	fPidKP				: LREAL := 10;
	fPidTn				: LREAL := 20.0;
	fPidTv				: LREAL := 0.0;


	bTest			: BOOL;
	nTestInt		: INT;
	nTestDint		: DINT;
	fTestLreal		: LREAL;
	sTest			: STRING(15);
	stTestCtrl		: Tc3_TcForms.ST_SetResetCtrl;
	stTestState		: Tc3_TcForms.ST_SetResetState;
	
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>